# xtodo

./: .gitignore  README.md  autobuild.sh  config.sh  meson.build  todo.xtt  xtodo.cbp  xtodo.layout
cli/: main.cpp  meson.build  terminal.cpp  terminal.hpp
core/: reader.cpp  reader.hpp  task.cpp  task.hpp
documents/: README.md  diagram.dia  dokumentace.md  uzivatelska-prirucka.md
gui/: editwindow.ui  gui.cpp  gui.hpp  main.cpp  mainwindow.ui  meson.build  qui.cpp  xtodo_en_GB.ts
resources/: resources.qrc
src/: config.ini  editwindow.ui  exception.cpp  exception.hpp  findwindow.ui  mainwindow.ui  qui.hpp  reader.cpp  terminal.hpp
tudu/: Cargo.toml
tudu/src/: main.rs
xtodo/: CMakeLists.txt  editwindow.ui  findwindow.ui  main.cpp  mainwindow.ui  qui.cpp  qui.hpp  reader.cpp  reader.hpp  task.cpp  task.hpp  terminal.cpp  xtodo_en_GB.ts
